# Safe-Chat

./: .gitignore  README.md  launch_dev_env.sh
app/: README.md  build.gradle.kts  settings.gradle.kts
app/app/: build.gradle.kts
app/app/schemas/tech.ziasvannes.safechat.data.local.SafeChatDatabase/: 1.json
app/app/src/androidTest/java/tech/ziasvannes/safechat/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/tech/ziasvannes/safechat/: MainActivity.kt  SafeChatApplication.kt
app/app/src/main/java/tech/ziasvannes/safechat/di/: DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt  TestDataModule.kt
app/app/src/main/java/tech/ziasvannes/safechat/presentation/: SafeChatApp.kt
app/app/src/main/java/tech/ziasvannes/safechat/session/: UserSession.kt
app/app/src/main/java/tech/ziasvannes/safechat/testing/: FakeContactRepository.kt  FakeMessageRepository.kt  TestDataGenerator.kt  TestInitializer.kt  TestMessageSimulator.kt  (+1 more)
app/app/src/main/res/values/: themes.xml
app/app/src/test/java/tech/ziasvannes/safechat/: ExampleUnitTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
backend/: .env.example  Cargo.toml  Dockerfile  ENDPOINTS.md  README.md  docker-compose.yml  entrypoint.sh
backend/migrations/: 0001_init.sql  0002_messages_users_fk.sql  0002_users_uuid.sql  0003_fix_public_key_formats.sql  0004_remove_message_content_column.sql  20250512132124_init.sql
backend/src/: api.rs  auth.rs  crypto.rs  dbtable.html  main.rs  state.rs  websocket.rs
images/screenshots/: .gitkeep
(+61 files in other folders)
