[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
jsonwebtoken = "9.2"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
x25519-dalek = "2.0"
base64 = "0.22"
rand_core = "0.6"
